# biz/handler/application/ApplicationList.go
@@ -13,6 +13,7 @@ import (
 // @Param callup_id					query int false "选填 召集令 id"
 // @Param callee_id					query int false "选填 请求者 id"
 // @Param status					query int false "选填 请求状态"
+// @Param application_id 			query int false "选填 申请 Id"
 // @Success 200 {object} ApplicationV1ListResponse
 // @Failure 400 {object} resp.ErrorStatus400
 // @Failure 401 {object} resp.ErrorStatus401
@@ -27,9 +28,10 @@ type ApplicationV1ListRequest struct {
 	Page     int32 `json:"page"`
 	PageSize int32 `json:"page_size"`
 
-	CallupId int64 `json:"callup_id"`
-	CalleeId int64 `json:"callee_id"`
-	Status   int32 `json:"status"`
+	CallupId      int64 `json:"callup_id"`
+	CalleeId      int64 `json:"callee_id"`
+	Status        int32 `json:"status"`
+	ApplicationId int64 `json:"application_id"`
 }
 
 type ApplicationV1ListResponse struct {
