# docs/swagger.json
@@ -46,6 +46,12 @@
                         "description": "选填 请求状态",
                         "name": "status",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "选填 申请 Id",
+                        "name": "application_id",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -293,6 +299,12 @@
                         "type": "integer",
                         "description": "选填 召集令状态",
                         "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "选填 召集令 id",
+                        "name": "callup_id",
                         "in": "query"
                     }
                 ],
@@ -589,6 +601,12 @@
                         "type": "integer",
                         "description": "选填 城市",
                         "name": "city",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "选填 用户 id",
+                        "name": "user_id",
                         "in": "query"
                     }
                 ],
